fixing spacing

--- a/blocks/learn-more/learn-more.css
+++ b/blocks/learn-more/learn-more.css
@@ -125,8 +125,8 @@
   font-weight: 700
 }
 
-.learn-more-wrapper :is(.leading-10) {
-  line-height: 2.5rem
+.learn-more-wrapper :is(.leading-\[1\.5rem\]) {
+  line-height: 1.5rem
 }
 
 .learn-more-wrapper :is(.leading-snug) {
