--- a/blocks/product-categories/product-categories.css
+++ b/blocks/product-categories/product-categories.css
@@ -35,6 +35,10 @@
   height: 10rem
 }
 
+.product-categories-wrapper :is(.min-h-\[40px\]) {
+  min-height: 40px
+}
+
 .product-categories-wrapper :is(.w-full) {
   width: 100%
 }
@@ -163,6 +167,11 @@
   line-height: 2rem
 }
 
+.product-categories-wrapper :is(.text-3xl) {
+  font-size: 1.875rem;
+  line-height: 2.25rem
+}
+
 .product-categories-wrapper :is(.text-base) {
   font-size: 1rem;
   line-height: 1.5rem
@@ -211,11 +220,6 @@
 .product-categories-wrapper :is(.text-gray-500) {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity))
-}
-
-.product-categories-wrapper :is(.text-gray-900) {
-  --tw-text-opacity: 1;
-  color: rgb(17 24 39 / var(--tw-text-opacity))
 }
 
 .product-categories-wrapper :is(.filter) {
