--- a/blocks/separator-line/separator-line.css
+++ b/blocks/separator-line/separator-line.css
@@ -8,22 +8,6 @@
   display: block
 }
 
-.separator-line-wrapper :is(.flex) {
-  display: flex
-}
-
-.separator-line-wrapper :is(.max-w-3xl) {
-  max-width: 48rem
-}
-
-.separator-line-wrapper :is(.flex-col) {
-  flex-direction: column
-}
-
-.separator-line-wrapper :is(.items-start) {
-  align-items: flex-start
-}
-
 .separator-line-wrapper :is(.bg-danaherlightblue-50) {
   --tw-bg-opacity: 1;
   background-color: rgb(239 251 253 / var(--tw-bg-opacity))
