--- a/blocks/simple-text/simple-text.css
+++ b/blocks/simple-text/simple-text.css
@@ -117,8 +117,8 @@
   font-weight: 200
 }
 
-.simple-text-wrapper :is(.font-normal) {
-  font-weight: 200
+.simple-text-wrapper :is(.font-medium) {
+  font-weight: 400
 }
 
 .simple-text-wrapper :is(.leading-10) {
